// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormSection Should create a form containing one section 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    style={undefined}
  />
</form>
`;

exports[`FormSection Should create a form containing two sections but both values should be returned 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <div
      style={undefined}
    >
      <span>
        Input type 
        text
         does not have a defined component type
      </span>
    </div>
  </div>
  <div>
    <div
      style={undefined}
    >
      <span>
        Input type 
        text
         does not have a defined component type
      </span>
    </div>
  </div>
</form>
`;

exports[`FormSection Should create a form containing two sections but both values should be returned even with a component layout 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <div
      style={undefined}
    >
      <span>
        Input type 
        text
         does not have a defined component type
      </span>
    </div>
  </div>
  <div>
    <div
      style={undefined}
    >
      <span>
        Input type 
        text
         does not have a defined component type
      </span>
    </div>
  </div>
</form>
`;

exports[`FormSection Should create a form containing two sections but no tags 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <div
      style={undefined}
    >
      <span>
        Input type 
        text
         does not have a defined component type
      </span>
      <span>
        Input type 
        text
         does not have a defined component type
      </span>
    </div>
  </div>
  <div>
    <div
      style={undefined}
    >
      <span>
        Input type 
        text
         does not have a defined component type
      </span>
      <span>
        Input type 
        text
         does not have a defined component type
      </span>
    </div>
  </div>
</form>
`;

exports[`FormSection Should create a form containing two sections w/tags 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <div
      style={undefined}
    >
      <span>
        Input type 
        text
         does not have a defined component type
      </span>
    </div>
  </div>
  <div>
    <div
      style={undefined}
    >
      <span>
        Input type 
        text
         does not have a defined component type
      </span>
    </div>
  </div>
</form>
`;

exports[`FormSection Should create a form with a section containing 0 fields 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    style={undefined}
  />
</form>
`;

exports[`FormSection Should use camel cased label for name when no name provided 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    style={undefined}
  >
    <span>
      Input type 
      text
       does not have a defined component type
    </span>
  </div>
</form>
`;

exports[`FormSection Should use name when provided 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    style={undefined}
  >
    <span>
      Input type 
      text
       does not have a defined component type
    </span>
  </div>
</form>
`;
